Backend: Flyway, DTOs de Response, Mais testes unitários
Frontend: CRUD com Listas